# agentthread

./: .gitignore  README.md  pyproject.toml
agentthread/: __init__.py  cli.py  config.py  ids.py  models.py  policy.py  recall.py  store.py  task_backends.py  workflow_cli.py
agentthread/integrations/: __init__.py
agentthread/integrations/hermes/: __init__.py  a2a_thread_wrapper.py  threaded_a2a_cli.py
docs/: agentthread-concept.md  agentthread-mvp.md  agentthread-spec.md  hermes-integration.md  hermes-rollout.md
tests/: test_cli.py  test_config_init.py  test_hermes_a2a_wrapper.py  test_multica_backend.py  test_policy_doctor.py  test_recall.py  test_store.py  test_task_backends.py  test_workflow_cli.py
