[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentthread"
version = "0.1.0"
description = "Persistent collaboration threads for multi-agent systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AgentThread contributors" }]
keywords = ["agents", "sqlite", "collaboration", "a2a", "memory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.scripts]
agent-thread = "agentthread.cli:main"
agent-thread-a2a = "agentthread.integrations.hermes.threaded_a2a_cli:main"
agentthread = "agentthread.workflow_cli:main"

[tool.setuptools.packages.find]
include = ["agentthread*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
